| Summary: | ASTERISK-29252: TRANSFERSTATUSPROTOCOL variable to report Transfer (REFER) failure SIP code | ||
| Reporter: | Dan Cropp (daninmadison) | Labels: | |
| Date Opened: | 2021-01-19 11:28:05.000-0600 | Date Closed: | 2021-01-27 11:44:21.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_transfer Channels/chan_pjsip |
| Versions: | 16.15.0 18.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | There are many different cases where each system wants a unique behavior based on the reason the connected system rejects a Transfer/REFER.
For example, a system may need a cascade of numbers to transfer to. Transfer to the primary, if 486 (Busy Here), transfer to the secondary, if 486 (Busy Here), transfer to the tertiary, etc. Similarly, if a system rejects the REFER with a 404 Not Found, the system administrator may want to not allow transferring to this number. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-01-19 11:28:06.030-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Dan Cropp (daninmadison) 2021-01-19 11:28:56.628-0600 If approved, I would like to be assigned this feature addition. By: Joshua C. Colp (jcolp) 2021-01-19 11:30:57.662-0600 There's no approval or anything, to that end the issue has been assigned to you. By: Friendly Automation (friendly-automation) 2021-01-27 11:44:22.003-0600 Change 15377 merged by Friendly Automation: chan_pjsip, app_transfer: Add TRANSFERSTATUSPROTOCOL variable [https://gerrit.asterisk.org/c/asterisk/+/15377|https://gerrit.asterisk.org/c/asterisk/+/15377] By: Friendly Automation (friendly-automation) 2021-01-27 11:44:51.928-0600 Change 15338 merged by Friendly Automation: chan_pjsip, app_transfer: Add TRANSFERSTATUSPROTOCOL variable [https://gerrit.asterisk.org/c/asterisk/+/15338|https://gerrit.asterisk.org/c/asterisk/+/15338] By: Friendly Automation (friendly-automation) 2021-01-27 11:48:49.877-0600 Change 15368 merged by George Joseph: chan_pjsip, app_transfer: Add TRANSFERSTATUSPROTOCOL variable [https://gerrit.asterisk.org/c/asterisk/+/15368|https://gerrit.asterisk.org/c/asterisk/+/15368] | ||